--- a/consumer-a/pom.xml
+++ b/consumer-a/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0</version>
     </parent>
 
-    <artifactId>service-b</artifactId>
+    <artifactId>consumer-a</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -24,6 +24,10 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
     </dependencies>
 
