--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,17 @@
     <modules>
         <module>service-a</module>
         <module>service-b</module>
+        <module>register-a</module>
+        <module>register-b</module>
+        <module>consumer-a</module>
     </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring-cloud.version>2021.0.0</spring-cloud.version>
+        <spring-boot.version>2.6.15</spring-boot.version>
     </properties>
 
     <dependencies>
@@ -39,8 +44,16 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>2022.0.0</version>
+                <version>${spring-cloud.version}</version>
                 <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
